--- a/package.json
+++ b/package.json
@@ -20,9 +20,16 @@
   "dependencies": {
     "apollo-server-core": "^3.13.0",
     "apollo-server-express": "^3.13.0",
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "graphql": "^16.8.1",
-    "nodemon": "^3.0.2"
+    "graphql-resolvers": "^0.4.2",
+    "graphql-subscriptions": "^2.0.0",
+    "jsonwebtoken": "^9.0.2",
+    "lodash": "^4.17.21",
+    "mongoose": "^8.0.3",
+    "nodemon": "^3.0.2",
+    "validator": "^13.11.0"
   }
 }
