--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
+    "@graphql-tools/schema": "^10.0.2",
     "apollo-server-core": "^3.13.0",
     "apollo-server-express": "^3.13.0",
     "bcryptjs": "^2.4.3",
@@ -26,10 +27,12 @@
     "graphql": "^16.8.1",
     "graphql-resolvers": "^0.4.2",
     "graphql-subscriptions": "^2.0.0",
+    "graphql-ws": "^5.14.3",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "mongoose": "^8.0.3",
     "nodemon": "^3.0.2",
-    "validator": "^13.11.0"
+    "validator": "^13.11.0",
+    "ws": "^8.16.0"
   }
 }
